# XmlWrapper

./: CMakeLists.txt
CMakeModules/: Findlibxerces-c.cmake
TestFiles/: GasTurbineGenSet.vte
XmlWrapper/: CMakeLists.txt
XmlWrapper/include/: ICloneable.h  IXmlLineInfo.h  XContainer.h  XDeclaration.h  XDocument.h  XElement.h  XNode.h  XObject.h  XmlNodeType.h
XmlWrapper/src/: XContainer.cpp  XDeclaration.cpp  XDocument.cpp  XNode.cpp  XObject.cpp
XmlWrapperTest/: CMakeLists.txt
XmlWrapperTest/include/: XercesParserHandler.h
XmlWrapperTest/src/: XercesParserHandler.cpp  main.cpp
XmlWrapperXerces/: CMakeLists.txt
XmlWrapperXerces/include/: XercesParserHandler.h
XmlWrapperXerces/src/: XDocument.cpp  XercesParserHandler.cpp
