set(LIBXMLWRAPPER_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include" PARENT_SCOPE)
file(GLOB_RECURSE XML_WRAPPER_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE XML_WRAPPER_HEADERS "${LIBXMLWRAPPER_INCLUDE}/*.h")
add_library(XmlWrapper STATIC ${XML_WRAPPER_SOURCE})
source_group("Headers" FILES ${XML_WRAPPER_HEADERS})
source_group("Sources" FILES ${XML_WRAPPER_SOURCE})

target_include_directories(XmlWrapper PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

check_cxx_compiler_flag(-fPIC COMPILER_HAS_FLAG)
if(COMPILER_HAS_FLAG)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
endif()